[package]
name = "reshotka"
description = "A tool for HiRep simulation analysis."
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-only"
license-file = "LICENSE.txt"
repository = "https://github.com/supertrianguloid/reshotka"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
rayon = "1.10.0"
roots = "0.0.8"
serde = { version = "1.0.217", features = ["derive"] }
