[package]
name = "lf"
description = "A tool for fitting lattice data."
version = "0.0.1"
edition = "2021"
rust-version = "1.76"
license = "GPL-3.0-only"
repository = "https://github.com/supertrianguloid/lf"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5.8"
nalgebra = "0.33.2"
rand = "0.9.2"
rayon = "1.10.0"
roots = "0.0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
varpro = "0.13.3"
